[package]
name = "c0c"
version = "0.1.0"
authors = ["Cool Partner 1 <your-email-here@andrew.cmu.edu>", "Cool Partner 2 <your-other-email@andrew.cmu.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.61"
topological-sort = "0.2.2"